--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Название сайта</title>
     <meta name="robots" content="noindex, nofollow">
     <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <header id="header">
@@ -131,4 +132,5 @@
         <p>&copy; Николай Овсепян</p>
     </footer>
 </body>
+
 </html>
