--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr><td>Данные 1.1</td><td>Данные 1.2</td><td>Данные 1.3</td><td>Данные 1.4</td></tr>
-                    <tr><td>Данные 2.1</td><td>Данные 2.2</td><td>Данные 2.3</td><td>Данные 2.4</td></tr>
-                    <tr><td>Данные 3.1</td><td>Данные 3.2</td><td>Данные 3.3</td><td>Данные 3.4</td></tr>
+                    <tr><td colspan=2>Данные 1.1</td><td>Данные 1.3</td><td>Данные 1.4</td></tr>
+                    <tr><td rowspan=2>Данные 2.1</td><td>Данные 2.2</td><td>Данные 2.3</td><td>Данные 2.4</td></tr>
+                    <tr><td>Данные 3.2</td><td>Данные 3.3</td><td>Данные 3.4</td></tr>
                     <tr><td>Данные 4.1</td><td>Данные 4.2</td><td>Данные 4.3</td><td>Данные 4.4</td></tr>
                     <tr><td>Данные 5.1</td><td>Данные 5.2</td><td>Данные 5.3</td><td>Данные 5.4</td></tr>
                     <tr><td>Данные 6.1</td><td>Данные 6.2</td><td>Данные 6.3</td><td>Данные 6.4</td></tr>
@@ -134,3 +134,4 @@
 </body>
 
 </html>
+
