--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <header id="header">
-        <img src="logo.png" alt="Логотип КубГУ" class="logo">
-        <div class="site-name">Название сайта</div>
+        <img src="logo.png" class="logo">
+        <div class="site-name">Лабораторная 3</div>
         <nav id="nav">
             <a href="#">Ссылка меню 1</a>
             <a href="#">Ссылка 2</a>
@@ -134,4 +134,5 @@
 </body>
 
 </html>
+
 
