--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 </head>
 <body>
     <header id="header">
+        <div class="site-name">
         <img src="logo.png" class="logo">
-        <div class="site-name">Лабораторная 3</div>
+        <p>Лабораторная 3</p></div>
         <nav id="nav">
             <a href="#">Ссылка меню 1</a>
             <a href="#">Ссылка 2</a>
@@ -134,5 +135,6 @@
 </body>
 
 </html>
+
 
 
